Bug fix to make privacy policy links visible.

--- a/less/theme.less
+++ b/less/theme.less
@@ -12,6 +12,7 @@
 // 6. #GENERAL FORMS
 // 7. #MESSAGES
 // 8. #COOKIE MESSAGE
+// 9. #GDPR MESSAGE
 
 
 // -----------------------------
@@ -847,7 +848,6 @@ select span {
     .message--success;
 }
 
-
 .overlay.fail .message-box {
     .message;
     .message--warning;
@@ -864,4 +864,17 @@ select span {
 	p, a {}
 	p a {}
 	.bk-cookie-close-button {}
+}
+
+
+// -----------------------------
+// 9. #GDPR MESSAGE
+// -----------------------------
+
+.gdpr-footer {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    border-top: 1px solid @color__footer--border;
+    background-color: @color__footer--background;
 }
